--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -58,10 +58,10 @@ pre {
 pre > code {
 	all: unset;
 }
-blockquote {
+/* blockquote {
 	border: 1px solid #999;
 	color: #222;
 	padding: 2px 0px 2px 20px;
 	margin: 0px;
 	font-style: italic;
-}
+} */
