--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -2,6 +2,7 @@
 import BaseHead from "../components/BaseHead.astro";
 import Header from "../components/Header.astro";
 import Footer from "../components/Footer.astro";
+import { Image } from "@astrojs/image/components";
 
 export interface Props {
   content: {
@@ -9,12 +10,28 @@ export interface Props {
     description: string;
     pubDate?: string;
     updatedDate?: string;
-    heroImage?: string;
+    heroImageSrc?: string;
+    heroImageWidth?: number;
+    heroImageHeight?: number;
+    heroImageAlt?: string;
+    heroImageAspectRatio?: string;
+    heroImageClass?: string;
   };
 }
 
 const {
-  content: { title, description, pubDate, updatedDate, heroImage },
+  content: {
+    title,
+    description,
+    pubDate,
+    updatedDate,
+    heroImageSrc,
+    heroImageWidth,
+    heroImageHeight,
+    heroImageAlt,
+    heroImageAspectRatio,
+    heroImageClass,
+  },
 } = Astro.props;
 ---
 
@@ -37,7 +54,25 @@ const {
     <Header />
     <main>
       <article>
-        {heroImage && <img width={720} height={360} src={heroImage} alt="" />}
+        <div class="flex justify-center p-4">
+          {
+            heroImageSrc && (
+              <Image
+                class={heroImageClass}
+                format="webp"
+                width={heroImageWidth}
+                height={heroImageHeight}
+                aspectRatio={
+                  heroImageWidth && heroImageHeight
+                    ? undefined
+                    : heroImageAspectRatio
+                }
+                src={heroImageSrc}
+                alt={heroImageAlt ?? ""}
+              />
+            )
+          }
+        </div>
         <h1 class="title">{title}</h1>
         {pubDate && <time>{pubDate}</time>}
         {
