--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,6 +2,7 @@
 import BaseHead from "../components/BaseHead.astro";
 import Header from "../components/Header.astro";
 import Footer from "../components/Footer.astro";
+import Quote from "../components/Quote.astro";
 import { SITE_TITLE, SITE_DESCRIPTION } from "../config";
 ---
 
@@ -13,50 +14,27 @@ import { SITE_TITLE, SITE_DESCRIPTION } from "../config";
   <body>
     <Header title={SITE_TITLE} />
     <main>
-      <h1 text-xl text-orange-400>🧑‍🚀 Hello, Astronaut!</h1>
-      <p>
-        Welcome to the official <a href="https://astro.build/">Astro</a> blog starter
-        template. This template serves as a lightweight, minimally-styled starting
-        point for anyone looking to build a personal website, blog, or portfolio
-        with Astro.
-      </p>
-      <p>
-        This template comes with a few integrations already configured in your
-        <code>astro.config.mjs</code> file. You can customize your setup with
-        <a href="https://astro.build/integrations">Astro Integrations</a> to add
-        tools like Tailwind, React, or Vue to your project.
-      </p>
-      <p>Here are a few ideas on how to get started with the template:</p>
-      <ul>
-        <li>Edit this page in <code>src/pages/index.astro</code></li>
-        <li>
-          Edit the site header items in <code>src/components/Header.astro</code>
-        </li>
-        <li>
-          Add your name to the footer in <code>src/components/Footer.astro</code
-          >
-        </li>
-        <li>
-          Check out the included blog posts in <code>src/pages/blog/</code>
-        </li>
-        <li>
-          Customize the blog post page layout in <code
-            >src/layouts/BlogPost.astro</code
-          >
-        </li>
-      </ul>
-      <p>
-        Have fun! If you get stuck, remember to <a
-          href="https://docs.astro.build/"
-          >read the docs
-        </a> or <a href="https://astro.build/chat">join us on Discord</a> to ask
-        questions.
-      </p>
-      <p>
-        Looking for a blog template with a bit more personality? Check out <a
-          href="https://github.com/Charca/astro-blog-template"
-          >astro-blog-template
-        </a> by <a href="https://twitter.com/Charca">Maxi Ferreira</a>.
+      <h1 class="text-xl text-orange-400 mb-4">
+        🧑‍🚀 Welcome to my AstroJS site!
+      </h1>
+      <Quote
+        avatarAlt="Kevin Chen"
+        avatarUrl="/mac-dog-1.jpeg"
+        company="The Drivers Coop"
+        linkUrl="https://www.linkedin.com/in/kevinchen93/"
+        name="Kevin Chen"
+        quote="Woohoo"
+      />
+      <p class="mt-4">
+        I was inspired to use <a href="https://astro.build/" target="_blank"
+          >AstroJS</a
+        > since this site will be static, with the rare exception, such as the navbar.
+        Astro lets you use any UI framework (e.g., React, Preact, etc) and checks
+        a lot of SEO boxes (image optimization, RSS, sitemaps, etc). It's also built
+        with the
+        <a href="https://docs.astro.build/en/concepts/islands/" target="_blank"
+          >Islands Architecture</a
+        > in mind so that the client receives as little JS as necessary.
       </p>
     </main>
     <Footer />
