Use UnoCSS Typography plugin

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -12,11 +12,15 @@ import { SITE_TITLE } from "../config";
     <HeaderLink href="/blog">Blog</HeaderLink>
     <HeaderLink href="/about">About</HeaderLink>
     <HeaderLink href="https://twitter.com/kevinmchen" target="_blank"
-      >Twitter</HeaderLink
-    >
+      ><div class="i-tabler-brand-twitter"></div>
+    </HeaderLink>
     <HeaderLink href="https://github.com/kevinmichaelchen" target="_blank"
-      >GitHub</HeaderLink
-    >
+      ><div class="i-tabler-brand-github"></div>
+    </HeaderLink>
+    <HeaderLink href="/rss.xml" target="_blank"
+      ><div class="i-tabler-rss"></div>
+    </HeaderLink>
+    <div class="i-tabler-moon"></div>
   </nav>
 </header>
 <style>
