--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -52,7 +52,7 @@ const {
 
   <body>
     <Header />
-    <main>
+    <main class="prose lg:prose-xl">
       <article>
         <div class="flex justify-center p-4">
           {
