--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -36,7 +36,7 @@ const posts = (await Astro.glob("./blog/*.{md,mdx}")).sort(
   </head>
   <body>
     <Header />
-    <main>
+    <main class="prose lg:prose-xl">
       <section>
         <ul>
           {
