--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -33,21 +33,14 @@ const {
     heroImageClass,
   },
 } = Astro.props;
+
+import H2 from "../components/H2.jsx";
+export const components = { h2: H2, header2: H2 };
 ---
 
 <html lang="en">
   <head>
     <BaseHead title={title} description={description} />
-    <style>
-      .title {
-        font-size: 2em;
-        margin: 0.25em 0 0;
-      }
-      hr {
-        border-top: 1px solid #ddd;
-        margin: 1rem 0;
-      }
-    </style>
   </head>
 
   <body>
@@ -73,7 +66,7 @@ const {
             )
           }
         </div>
-        <h1 class="title">{title}</h1>
+        <h1 class="text-[2em] mt-[0.25em] mx-0 mb-0">{title}</h1>
         {pubDate && <time>{pubDate}</time>}
         {
           updatedDate && (
@@ -82,7 +75,7 @@ const {
             </div>
           )
         }
-        <hr />
+        <hr class="my-4 mx-0" />
         <slot />
       </article>
     </main>
