--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -4,12 +4,20 @@ import Header from "../components/Header.astro";
 import Footer from "../components/Footer.astro";
 import { SITE_TITLE, SITE_DESCRIPTION } from "../config";
 
-// Use Astro.glob() to fetch all posts, and then sort them by date.
-const posts = (await Astro.glob("./blog/*.{md,mdx}")).sort(
-  (a, b) =>
-    new Date(b.frontmatter.pubDate).valueOf() -
-    new Date(a.frontmatter.pubDate).valueOf()
-);
+// Use Astro.glob() to fetch all posts, sort them by date, and partition by year.
+const postChunks = (await Astro.glob("./blog/*.{md,mdx}"))
+  .sort(
+    (a, b) =>
+      new Date(b.frontmatter.pubDate).valueOf() -
+      new Date(a.frontmatter.pubDate).valueOf()
+  )
+  .reduce((acc, currentValue) => {
+    const str = currentValue.frontmatter.pubDate;
+    // TODO do proper year parsing from "Jul 15 2022"
+    const year = Number(str.substring(str.length - 4));
+    acc[year] = acc[year] ? [...acc[year], currentValue] : [currentValue];
+    return acc;
+  }, {});
 ---
 
 <!DOCTYPE html>
@@ -38,23 +46,41 @@ const posts = (await Astro.glob("./blog/*.{md,mdx}")).sort(
     <Header />
     <main class="prose lg:prose-xl">
       <section>
-        <ul>
+        <ul class="space-y-16">
           {
-            posts.map((post) => (
-              <li>
-                <time datetime={post.frontmatter.pubDate}>
-                  {new Date(post.frontmatter.pubDate).toLocaleDateString(
-                    "en-us",
-                    {
-                      year: "numeric",
-                      month: "short",
-                      day: "numeric",
-                    }
-                  )}
-                </time>
-                <a href={post.url}>{post.frontmatter.title}</a>
-              </li>
-            ))
+            Object.entries(postChunks).map(([year, posts]) => {
+              return (
+                <>
+                  <div class="relative h-20 pointer-events-none mt-5">
+                    <span class="absolute text-9xl opacity-10 top-[-2rem] left-[-3rem]">
+                      {year}
+                    </span>
+                  </div>
+                  {posts
+                    .sort(
+                      (a, b) =>
+                        new Date(b.frontmatter.pubDate).valueOf() -
+                        new Date(a.frontmatter.pubDate).valueOf()
+                    )
+                    .map((post) => (
+                      <a href={post.url}>
+                        <li>
+                          <time datetime={post.frontmatter.pubDate}>
+                            {new Date(
+                              post.frontmatter.pubDate
+                            ).toLocaleDateString("en-us", {
+                              year: "numeric",
+                              month: "short",
+                              day: "numeric",
+                            })}
+                          </time>
+                          <div>{post.frontmatter.title}</div>
+                        </li>
+                      </a>
+                    ))}
+                </>
+              );
+            })
           }
         </ul>
       </section>
