--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -46,16 +46,17 @@ const postChunks = (await Astro.glob("./blog/*.{md,mdx}"))
     <Header />
     <main class="prose lg:prose-xl">
       <section>
-        <ul class="space-y-16">
+        <ul class="space-y-4">
           {
             Object.entries(postChunks).map(([year, posts]) => {
               return (
                 <>
-                  <div class="relative h-20 pointer-events-none mt-5">
-                    <span class="absolute text-9xl opacity-10 top-[-2rem] left-[-3rem]">
+                  <div class="relative h-20 pointer-events-none">
+                    <span class="absolute text-9xl opacity-10 top-[1.7rem] left-[-3rem]">
                       {year}
                     </span>
                   </div>
+                  <div class="flex flex-col space-y-4">
                   {posts
                     .sort(
                       (a, b) =>
@@ -63,9 +64,10 @@ const postChunks = (await Astro.glob("./blog/*.{md,mdx}"))
                         new Date(a.frontmatter.pubDate).valueOf()
                     )
                     .map((post) => (
-                      <a href={post.url}>
-                        <li>
-                          <time datetime={post.frontmatter.pubDate}>
+                      <a href={post.url} class="no-underline group">
+                        <li class="flex flex-col">
+                          <div class="text-xl text-gray-400 group-hover:text-gray-600">{post.frontmatter.title}</div>
+                          <div class="text-sm text-gray-300 group-hover:text-gray-500 mt-[2px]">
                             {new Date(
                               post.frontmatter.pubDate
                             ).toLocaleDateString("en-us", {
@@ -73,11 +75,11 @@ const postChunks = (await Astro.glob("./blog/*.{md,mdx}"))
                               month: "short",
                               day: "numeric",
                             })}
-                          </time>
-                          <div>{post.frontmatter.title}</div>
+                          </div>
                         </li>
                       </a>
                     ))}
+                    </div>
                 </>
               );
             })
