--- a/src/components/HeaderLink.astro
+++ b/src/components/HeaderLink.astro
@@ -5,15 +5,19 @@ const { href, class: className, ...props } = Astro.props;
 const isActive = href === Astro.url.pathname;
 ---
 
-<a href={href} class:list={[className, { active: isActive }]} {...props}>
+<a
+  href={href}
+  class:list={[
+    className,
+    "flex",
+    "justify-center",
+    "items-center",
+    "text-gray-400",
+    "hover:text-gray-700",
+    "no-underline",
+    { "font-semibold": isActive },
+  ]}
+  {...props}
+>
   <slot />
 </a>
-<style>
-  a {
-    display: inline-block;
-    text-decoration: none;
-  }
-  a.active {
-    font-weight: bolder;
-  }
-</style>
