--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -7,24 +7,25 @@ import { SITE_TITLE } from "../config";
   <h2>
     {SITE_TITLE}
   </h2>
-  <a class="w-10 h-10 absolute lg:fixed m-6 select-none outline-none">
+  <a href="/" class="w-10 h-10 absolute lg:fixed m-6 select-none outline-none">
     <img src="/favicon.svg" />
   </a>
   <nav class="p-8 w-full grid grid-cols-[auto_max-content] box-border">
     <div class="m-auto"></div>
     <div class="grid gap-5 grid-flow-col">
-      <HeaderLink href="/">Home</HeaderLink>
-      <HeaderLink href="/blog">Blog</HeaderLink>
+      <HeaderLink href="/blog" iconClass="i-tabler-article">Blog</HeaderLink>
       <HeaderLink href="/about">About</HeaderLink>
-      <HeaderLink href="https://twitter.com/kevinmchen" target="_blank"
-        ><div class="i-tabler-brand-twitter"></div>
-      </HeaderLink>
-      <HeaderLink href="https://github.com/kevinmichaelchen" target="_blank"
-        ><div class="i-tabler-brand-github"></div>
-      </HeaderLink>
-      <HeaderLink href="/rss.xml" target="_blank"
-        ><div class="i-tabler-rss"></div>
-      </HeaderLink>
+      <HeaderLink
+        external
+        href="https://twitter.com/kevinmchen"
+        iconClass="i-tabler-brand-twitter"
+      />
+      <HeaderLink
+        external
+        href="https://github.com/kevinmichaelchen"
+        iconClass="i-tabler-brand-github"
+      />
+      <HeaderLink external href="/rss.xml" iconClass="i-tabler-rss" />
       <div class="i-tabler-moon"></div>
     </div>
   </nav>
