Some navbar links only show in MD breakpoint

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -14,7 +14,7 @@ import { SITE_TITLE } from "../config";
     <div class="m-auto"></div>
     <div class="grid gap-5 grid-flow-col">
       <HeaderLink href="/blog" iconClass="i-tabler-article">Blog</HeaderLink>
-      <HeaderLink href="/about">About</HeaderLink>
+      <HeaderLink href="/about" optional>About</HeaderLink>
       <HeaderLink
         external
         href="https://twitter.com/kevinmchen"
