--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -3,10 +3,7 @@ import HeaderLink from "./HeaderLink.astro";
 import { SITE_TITLE } from "../config";
 ---
 
-<header>
-  <h2>
-    {SITE_TITLE}
-  </h2>
+<header class="z-40">
   <a href="/" class="w-10 h-10 absolute lg:fixed m-6 select-none outline-none">
     <img src="/favicon.svg" />
   </a>
