--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,12 +2,13 @@
 const today = new Date();
 ---
 
-<footer>
-  &copy; {today.getFullYear()} Kevin Chen. All rights reserved.
+<footer class="mt-10 mb-6 prose m-auto opacity-50 flex underline-offset-4">
+  <span class="text-sm">
+    <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/"
+      >CC BY-NC-SA 4.0</a
+    >
+    {today.getFullYear()} &copy; Kevin Chen. Inspired by <a
+      href="https://antfu.me/">@antfu</a
+    >.
+  </span>
 </footer>
-<style>
-  footer {
-    padding: 25px;
-    text-align: center;
-  }
-</style>
