--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -44,7 +44,7 @@ const postChunks = (await Astro.glob("./blog/*.{md,mdx}"))
   </head>
   <body>
     <Header />
-    <main class="prose lg:prose-xl">
+    <main class="prose m-auto">
       <section>
         <ul class="space-y-4">
           {
@@ -52,7 +52,7 @@ const postChunks = (await Astro.glob("./blog/*.{md,mdx}"))
               return (
                 <>
                   <div class="relative h-20 pointer-events-none">
-                    <span class="absolute text-9xl opacity-10 top-[1.7rem] left-[-3rem]">
+                    <span class="absolute text-9xl opacity-10 top-[1.8rem] left-[-3rem]">
                       {year}
                     </span>
                   </div>
