--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -35,7 +35,14 @@ import { SITE_TITLE, SITE_DESCRIPTION } from "../config";
             > in mind so that the client receives as little JS as necessary.
           </p>
           <hr class="w-[50px] h-0 border-t m-[2em_auto] border-gray-300" />
-          <p>Find me on GitHub or Twitter.</p>
+          <p>
+            Find me on <a
+              href="https://github.com/kevinmichaelchen"
+              target="_blank">GitHub</a
+            > or <a href="https://twitter.com/kevinmchen" target="_blank"
+              >Twitter</a
+            >.
+          </p>
         </div>
       </article>
     </main>
