--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -8,7 +8,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from "../config";
 export const projects = [
   {
     name: "api-dispatch",
-    desc: "A dispatch server for rideshare platforms.",
+    desc: "A dispatch server for rideshare platforms using H3 geospatial indexing.",
     icon: "i-tabler-car",
     link: "https://github.com/kevinmichaelchen/api-dispatch/",
   },
@@ -30,8 +30,8 @@ export const projects = [
     <Header title={SITE_TITLE} />
     <main class="px-7 py-10">
       <div class="prose m-auto mb-8">
-        <h1 class="mb-2">My Projects</h1>
-        <p class="opacity-50 italic">List of projects I'm proud of</p>
+        <h1 class="mb-0">My Projects</h1>
+        <p class="opacity-50 italic -mt-1">List of projects I'm proud of</p>
       </div>
       <article>
         <div class="prose m-auto">
