--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,6 +2,7 @@
 import BaseHead from "../components/BaseHead.astro";
 import Header from "../components/Header.astro";
 import Footer from "../components/Footer.astro";
+import { Image } from "@astrojs/image/components";
 import { SITE_TITLE, SITE_DESCRIPTION } from "../config";
 ---
 
@@ -12,7 +13,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from "../config";
   </head>
   <body class="font-sans text-gray-700 dark:text-gray-200">
     <Header title={SITE_TITLE} />
-    <main class="px-7 py-10">
+    <main class="px-7 pb-10">
       <div class="prose m-auto mb-8">
         <h1 class="mb-0">Kevin Chen</h1>
       </div>
@@ -23,16 +24,35 @@ import { SITE_TITLE, SITE_DESCRIPTION } from "../config";
             role.
           </p>
           <p>
-            I was inspired to use <a href="https://astro.build/" target="_blank"
-              >AstroJS</a
-            > since this site will be static, with the rare exception, such as the
-            navbar. Astro lets you use any UI framework (e.g., React, Preact, etc)
-            and checks a lot of SEO boxes (image optimization, RSS, sitemaps, etc).
-            It's also built with the
-            <a
-              href="https://docs.astro.build/en/concepts/islands/"
-              target="_blank">Islands Architecture</a
-            > in mind so that the client receives as little JS as necessary.
+            My interests are in full-stack development, although admittedly I've
+            spent more time working in backend systems.
+          </p>
+          <p>
+            <span class="text-sm font-mono">&#60;sarcasm&#62;</span>Hopefully
+            it's not as bad as the "full-stack horse".<span
+              class="text-sm font-mono">&#60;/sarcasm&#62;</span
+            >
+          </p>
+          <div class="flex justify-center">
+            <Image
+              src="/full-stack-horse.jpg"
+              format="webp"
+              alt="A pencil-drawn horse, where the rear-side is drawn exquisitely and the front-side looks cartoonish."
+              height={200}
+              aspectRatio="4:3"
+            />
+          </div>
+          <p>
+            Recently, I've acquired experience with React, Typescript, GraphQL,
+            and Hasura. More broadly, I've acquired backend experience with SQL
+            and NoSQL; scaling out microservices built on Golang; designing APIs
+            with GraphQL, REST, gRPC + Protocol Buffers; event-driven
+            architectures with Kafka; working with infrastructure on AWS and
+            GCP; Docker and Kubernetes; Java/Spring, Rails, etc.
+          </p>
+          <p>
+            Outside of programming, you can find me coaching on a squash court,
+            playing bullet chess, or noodling on a guitar.
           </p>
           <hr class="w-[50px] h-0 border-t m-[2em_auto] border-gray-300" />
           <p>
