--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -27,20 +27,23 @@ import { SITE_TITLE, SITE_DESCRIPTION } from "../config";
             My interests are in full-stack development, although admittedly I've
             spent more time working in backend systems.
           </p>
-          <p>
-            <span class="text-sm font-mono">&#60;sarcasm&#62;</span>Hopefully
-            it's not as bad as the "full-stack horse".<span
-              class="text-sm font-mono">&#60;/sarcasm&#62;</span
-            >
-          </p>
-          <div class="flex justify-center">
-            <Image
-              src="/full-stack-horse.jpg"
-              format="webp"
-              alt="A pencil-drawn horse, where the rear-side is drawn exquisitely and the front-side looks cartoonish."
-              height={200}
-              aspectRatio="4:3"
-            />
+          <div class="flex justify-center align-items">
+            <figure class="flex flex-col space-y-4">
+              <Image
+                src="/full-stack-horse.jpg"
+                format="webp"
+                alt="A pencil-drawn horse, where the rear-side is drawn exquisitely and the front-side looks cartoonish."
+                height={200}
+                aspectRatio="4:3"
+                class="mx-auto"
+              />
+              <figcaption class="text-center">
+                <span class="text-xs font-mono">&#60;sarcasm&#62;</span
+                >Hopefully it's not as bad as the "full-stack horse".<span
+                  class="text-xs font-mono">&#60;/sarcasm&#62;</span
+                >
+              </figcaption>
+            </figure>
           </div>
           <p>
             Recently, I've acquired experience with React, Typescript, GraphQL,
