--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -17,7 +17,7 @@ export const projects = [
       },
       {
         name: "api-go-template",
-        desc: "A Go starter kit with dependency injection, gRPC, DB, logging, telemetry, etc.",
+        desc: "A Go starter kit with dependency injection, gRPC, DB, SQL ORM, logging, telemetry, etc.",
         icon: "i-tabler-list-check",
         link: "https://github.com/kevinmichaelchen/api-go-template",
       },
