--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -45,7 +45,7 @@ const tweetIntent = `Reading @kevinmchen's https://kchen.io${url}\n\nI think...`
 
   <body>
     <Header />
-    <main class="px-7 py-10">
+    <main class="px-7 pb-10">
       <div class="prose m-auto mb-8">
         <h1 class="mb-0">
           {title}
