--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -40,7 +40,10 @@ const tweetIntent = `Reading @kevinmchen's https://kchen.io${url}\n\nI think...`
 
 <html lang="en">
   <head>
-    <BaseHead title={title} description={description} />
+    <BaseHead
+      title={`Kevin Chen | Blog | ${title}`}
+      description={description}
+    />
   </head>
 
   <body>
