--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -24,6 +24,7 @@ import { Image } from "@astrojs/image/components";
       <HeaderLink href="/projects" iconClass="i-tabler-bulb"
         >Projects</HeaderLink
       >
+      <HeaderLink href="/resume" iconClass="i-tabler-tie">Résumé</HeaderLink>
       <HeaderLink href="/about" optional>About</HeaderLink>
       <HeaderLink
         external
@@ -36,6 +37,12 @@ import { Image } from "@astrojs/image/components";
         optional
         href="https://github.com/kevinmichaelchen"
         iconClass="i-tabler-brand-github"
+      />
+      <HeaderLink
+        external
+        optional
+        href="https://www.linkedin.com/in/kevinchen93/"
+        iconClass="i-tabler-brand-linkedin"
       />
       <HeaderLink external optional href="/rss.xml" iconClass="i-tabler-rss" />
       <div
