--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -20,7 +20,7 @@ import { Image } from "@astrojs/image/components";
   <nav class="p-8 w-full grid grid-cols-[auto_max-content] box-border">
     <div class="m-auto"></div>
     <div class="grid gap-5 grid-flow-col">
-      <HeaderLink href="/blog" iconClass="i-tabler-article">Blog</HeaderLink>
+      <HeaderLink href="/blog" iconClass="i-tabler-ballpen">Blog</HeaderLink>
       <HeaderLink href="/projects" iconClass="i-tabler-bulb"
         >Projects</HeaderLink
       >
