--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -49,7 +49,7 @@ const tweetIntent = `Reading @kevinmchen's https://kchen.io${url}\n\nI think...`
   <body>
     <Header />
     <main class="px-7 pb-10">
-      <div class="prose m-auto mb-8">
+      <div class="prose m-auto mb-8 font-serif">
         <h1 class="mb-0">
           {title}
         </h1>
@@ -88,7 +88,7 @@ const tweetIntent = `Reading @kevinmchen's https://kchen.io${url}\n\nI think...`
           }
         </div>
         <hr class="my-4 mx-0" />
-        <div class="prose m-auto">
+        <div class="prose m-auto font-serif">
           <slot />
         </div>
       </article>
