--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -14,4 +14,7 @@ const today = new Date();
   <div class="text-sm">
     Inspired by <a href="https://antfu.me/">@antfu</a>.
   </div>
+  <div class="hidden">
+    Git commit SHA: {import.meta.env.PUBLIC_VERCEL_GIT_COMMIT_SHA}
+  </div>
 </footer>
