--- a/src/layouts/BlogPostWithSubheader.astro
+++ b/src/layouts/BlogPostWithSubheader.astro
@@ -36,7 +36,9 @@ const {
   },
 } = Astro.props;
 
-const tweetIntent = `Reading @kevinmchen's ${import.meta.env.SITE}${url}\n\nI think...`;
+const tweetIntent = `Reading @kevinmchen's ${
+  import.meta.env.SITE
+}${url}\n\nI think...`;
 ---
 
 <html lang="en">
