--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -21,8 +21,10 @@ import { Image } from "@astrojs/image/components";
     <div class="m-auto"></div>
     <div class="grid gap-5 grid-flow-col">
       <HeaderLink href="/blog" iconClass="i-tabler-ballpen">Blog</HeaderLink>
-      <HeaderLink href="/projects" iconClass="i-tabler-bulb"
+      <HeaderLink href="/projects" optional iconClass="i-tabler-bulb"
         >Projects</HeaderLink
+      >
+      <HeaderLink href="/talks" iconClass="i-tabler-device-tv">Talks</HeaderLink
       >
       <HeaderLink href="/resume" iconClass="i-tabler-tie">Résumé</HeaderLink>
       <HeaderLink href="/about" optional>About</HeaderLink>
