--- a/src/components/Subheader.astro
+++ b/src/components/Subheader.astro
@@ -5,6 +5,10 @@ const links = [
     name: "Blog",
   },
   {
+    href: "/talks",
+    name: "Talks",
+  },
+  {
     href: "/resume",
     name: "Résumé",
   },
